--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     </header>
     <main>
         <div class="gamecontainer">
-            <div>game goes here</div>
+            <div class="column" id="columnone">column 1</div>
+            <div class="column" id="columntwo">column 2</div>
+            <div class="column" id="columnthree">column 3</div>            
         </div>
         <div class="instructions">
             <p>game instructions</p>
         </div>
     </main>
+    <footer>
+        <h3>add a footer here</h3>
+    </footer>
 
     
     <script src="main.js"></script>
