created block objects

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </header>
     <main>
         <div class="gamecontainer">
-            <div class="column" id="columnone">column 1</div>
-            <div class="column" id="columntwo">column 2</div>
-            <div class="column" id="columnthree">column 3</div>            
+            <div class="column" id="columnone"></div>
+            <div class="column" id="columntwo"></div>
+            <div class="column" id="columnthree"></div>            
         </div>
         <div class="instructions">
             <p>game instructions</p>
