more styling - game is FUNCTIONAL.  checking out new branch to try to refactor code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>PYRAMIDS</h1>
+        <h1>Move the Pyramid</h1>
+        <div class="counter"></div>
     </header>
     <main>
         <div class="gamecontainer">
@@ -18,7 +19,11 @@
             <div class="column" id="columnthree"></div>            
         </div>
         <div class="instructions">
-            <p>game instructions</p>
+            <p>To win, move blocks from the first column to the last column given the following rules:</p>
+            <ol>
+                <li>You may only move one block at a time.</li>
+                <li>You may not place a larger block on top of a smaller block.</li>
+            </ol>
         </div>
     </main>
     <footer>
