switching to new branch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <header>
         <h1>Move the Pyramid</h1>
+        <div class="instructions">
+            <p>How to Play: 1. Select the top block from any column. 2. Select a column to drop the block in.</p>
+            <p>To win, move blocks from the first column to the last column given the following rules:<br>
+            You may only move one block at a time. You may not place a larger block on top of a smaller block.</p>
+        </div>
         <div class="counter"></div>
     </header>
     <main>
@@ -18,16 +23,10 @@
             <div class="column" id="columntwo"></div>
             <div class="column" id="columnthree"></div>            
         </div>
-        <div class="instructions">
-            <p>To win, move blocks from the first column to the last column given the following rules:</p>
-            <ol>
-                <li>You may only move one block at a time.</li>
-                <li>You may not place a larger block on top of a smaller block.</li>
-            </ol>
-        </div>
+
     </main>
     <footer>
-        <h3>add a footer here</h3>
+        <h3>Created by Jeff Heller</h3>
     </footer>
 
     
