--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Move the Pyramid</h1>
-        <div class="instructions">
-            <p>How to Play: 1. Select the top block from any column. 2. Select a column to drop the block in.</p>
-            <p>To win, move blocks from the first column to the last column given the following rules:<br>
-            You may only move one block at a time. You may not place a larger block on top of a smaller block.</p>
-        </div>
+        <h1>Move the Pyramid!</h1>
         <div class="topScore">Best Score: Jeff - Total Moves: 31</div>
         <div class="counter">Total Moves: 0</div>
     </header>
