--- a/game.html
+++ b/game.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pyramids!</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
-</head>
+    <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
 <body>
     <header>
         <h1>Move the Pyramid!</h1>
