game complete. readme to be finished

--- a/game.html
+++ b/game.html
@@ -10,16 +10,21 @@
 <body>
     <header>
         <h1>Move the Pyramid!</h1>
-        <div class="topScore">Best Score: Jeff - Total Moves: 31</div>
-        <div class="counter">Total Moves: 0</div>
+        <div class="counter"> Blocks Moved: 0</div>
     </header>
     <main>
+        <div class="gametype">
+            <span>Select Level:</span>
+            <button class="easy block">Easy</button>
+            <button class="hard block">Hard</button>
+        </div>
+        <div class="instruction"></div>
         <div class="gamecontainer">
             <div class="column" id="columnone"></div>
             <div class="column" id="columntwo"></div>
             <div class="column" id="columnthree"></div>            
         </div>
-
+        <div class="topScore">Best Score:<br>Hard: Jeff - Total Moves: 31<br>Easy: Jeff - Total Moves: 7</div>
     </main>
     <footer>
         <h3>Created by Jeff Heller</h3>
