Restart Button added

--- a/game.html
+++ b/game.html
@@ -24,6 +24,7 @@
             <div class="column" id="columntwo"></div>
             <div class="column" id="columnthree"></div>            
         </div>
+        <a href="game.html" class="block restart"> <br>RESTART GAME!</a>
         <div class="topScore">Best Score:<br>Hard: Jeff - Total Moves: 31<br>Easy: Jeff - Total Moves: 7</div>
     </main>
     <footer>
