--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
 </head>
 <body>
-        <header>
-            <h1>Move the Pyramid!</h1>
-        </header>
+    <header>
+        <h1>Move the Pyramid!</h1>
+    </header>
     <div class="instructions">
         <p>How to Play: <br>1. Select the top block from any column by clicking on that column. <br>2. Select a column to place the block in.</p>
         <p>To win, move blocks from the first column to the last column given the following rules:<br>
             1. You may only move one block at a time.<br> 2. You may not place a larger block on top of a smaller block.</p>
-    </div>
-    <div class="topScore">Best Score: Jeff - Total Moves: 31</div>
+    </div> <!-- I've never been a fan of line breaks, I would make these all separate p tags, but I suppose to each their own -->
+    <div class="topScore">Best Score: Jeff - Total Moves: 31</div> <!-- I would make this part of instructions and make this a p tag -->
     <a href="game.html" class="block"> <br>START GAME!</a>
-    
+    <!-- I would do away with the line break and put the link inside a p tag and adjust line height or something like that -->
 </body>
 </html>
+<!-- Nice job on the html file.  I like that you included a separate file for instructions. -->
+<!-- Only thing I would say is that the font is a little small, but that's just me -->
